packages/svelte/tests/compiler-errors/samples/runes-non-bindable-prop-mutated/main.svelte
<script>
	let { x } = $props();
	x.y = 1;
</script>
